helm/wandb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wandb-ingress
  namespace: wandb
  annotations:
    kubernetes.io/ingress.class: "gce"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: wandb.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # The Helm release is installed with the name "wandb",
                # which creates a service named "wandb-server".
                name: wandb  
                port:
                  number: 8080
